--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,21 +2,30 @@
     package="com.example.rmtfinder">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
-        android:usesCleartextTraffic="true">
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_GOOGLE_MAPS_API_KEY_HERE"/>
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="RMT Finder"
-        android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
-        <activity android:name=".ProfileActivity"/>
-        <activity android:name=".MainActivity">
+        android:label="@string/app_name"
+        android:theme="@style/Theme.RMTFinder"
+        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="${MAPS_API_KEY}"/>
+        <activity 
+            android:name=".ProfileActivity"
+            android:exported="false"/>
+        <activity 
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity 
+            android:name=".MapActivity"
+            android:exported="false"/>
     </application>
 </manifest>
